# x_twitter_clone

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml
migrations/: 0001_create_post_table.up.sql
src/: lib.rs  main.rs  state.rs
src/db/: connect.rs  mod.rs  queries.rs
src/router/: mod.rs
src/router/post/: create.rs  get_all_top_level.rs  mod.rs
