[package]
name = "x_twitter_clone"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.22"
